added playstore code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 cache.enabled=false
-#spring.datasource.url=jdbc:postgresql://localhost/
-spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.datasource.url=jdbc:postgresql://localhost/
+#spring.datasource.url: ${JDBC_DATABASE_URL:}
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
